# BitBufferCpp

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/: bit_buffer.cpp  bit_buffer.hpp
tests/: test.cpp
